...
                                email = appState.user?.email ?? ""
                            } label: {
                                Image(systemName: "pencil")
                                    .font(.system(size: 24))
                                    .frame(width: 50, height: 50)
                            }
                            .accessibilityIdentifier("EditProfileButton")
                        }
                    }
                    else {
                        EditingProfileView(newsViewModel: newsViewModel, image: $selectedImage, imageURL: $imageURL, name: $name, email: $email, onCancel: {
                            withAnimation(.easeInOut) {
                                isEditingUser = false
...
