...
    
    let isEditable: Bool
    @State private var showsLargeCells: Bool = false
    
    var body: some View {
        VStack {
            SearchField("Search...", text: $viewModel.query)
            Picker("", selection: $showsLargeCells) {
                Image(systemName: "rectangle.grid.1x2").tag(false)
                Image(systemName: "square").tag(true)
            }
            .pickerStyle(.segmented)
            .frame(height: 40)
...
